# OrbiterSkyboltClient

./: .dvcignore  .gitignore  CMakeLists.txt  License.txt  README.md  conanfile.py
.dvc/: config
Assets/Orbiter/: package.json
Assets/Orbiter/Environment/: Explosion01_light_nofire.png.dvc  Explosion01_light_nofire_README.txt  Foam.jpg.dvc  Noise.png.dvc  TerrainDetailNoise.png.dvc
Assets/Orbiter/Environment/Cloud/: CloudVolumeBase.png.dvc  cloud_combined_8192.png.dvc
Assets/Orbiter/Environment/Concrete/: Asphalt010_2K_Color.jpg.dvc  Concrete006_2K_Color_Brightened.jpg.dvc  Concrete010_2K_Color.jpg.dvc  Concrete017_2K_Color.jpg.dvc
Assets/Orbiter/Environment/Facade/: Facade001_2K_Color.jpg.dvc  Facade006_2K_Color.jpg.dvc  photos_2017_7_6_fst_building-facade-windows.jpg.dvc
Assets/Orbiter/Environment/Facade/OpenGameArt/: apartment_block6.png.dvc  apartments1.jpg.dvc  apartments2_side.png.dvc  apartments4.png.dvc  building_jmu2.png.dvc  building_office2.png.dvc  building_office4.png.dvc  building_office7.png.dvc  building_office8.png.dvc
Assets/Orbiter/Environment/Forest/: spruceAtlas_side_albedo.tga.dvc  spruceAtlas_side_normal.tga.dvc  spruceAtlas_top_albedo.tga.dvc
Assets/Orbiter/Environment/Ground/: Ground026_1K_Color.jpg.dvc
Assets/Orbiter/Environment/Road/: Asphalt010_2K_Road_Color.jpg.dvc  RoadMarkings.png.dvc
Assets/Orbiter/Environment/Space/: MoonDisc.jpg.dvc  SunDisc.png.dvc
CMake/: FindOrbiter.cmake
src/OrbiterSkyboltClient/: CMakeLists.txt  DistantCelestialBodyFactory.cpp  DistantCelestialBodyFactory.h  Exhaust.cpp  Exhaust.h  ModelFactory.cpp  ModelFactory.h  ObjectUtil.cpp  ObjectUtil.h  OpenGlContext.cpp  OpenGlContext.h  OrbiterEntityFactory.cpp  OrbiterEntityFactory.h  OrbiterModel.cpp  OrbiterModel.h  OrbiterTextureIds.h  OrbiterVisibilityCategory.h  OsgSketchpad.cpp  OsgSketchpad.h  OverlayPanelFactory.cpp  OverlayPanelFactory.h  SkyboltClient.cpp  SkyboltClient.h  SkyboltClient.rc  SkyboltParticleStream.cpp  SkyboltParticleStream.h  TextureBlitter.cpp  TextureBlitter.h  TextureGroup.cpp  TextureGroup.h  TextureProvider.h  VideoTab.cpp  VideoTab.h  VisibilityCategory.h
src/OrbiterSkyboltClient/TileSource/: MemoryStreamBuf.h  OrbiterElevationTileSource.cpp  OrbiterElevationTileSource.h  OrbiterImageTileSource.cpp  OrbiterImageTileSource.h  OrbiterTileSource.cpp  OrbiterTileSource.h
